--- a/client/brewr/src/App.css
+++ b/client/brewr/src/App.css
@@ -1,18 +1,34 @@
 .App {
   text-align: center;
+  background-color: rgb(212, 188, 154);
+  color: rgb(63, 59, 58);
+}
+
+.navButton {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.navButton a {
+  color: rgb(63, 59, 58);
+  font-family: 'Arial';
+}
+footer {
+  background-color: rgb(63, 59, 58);
 }
 
 .StyleContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  border: 5px solid black;
+  border: 5px solid rgb(63, 59, 58);
   width: 75vw;
-  margin-bottom: 2rem;
+  margin: auto;
 }
 
 .StyleCard {
-  border: 2px solid red;
+  border: 2px solid rgba(255, 255, 255, 0.7);
   width: 75vh;
   margin-bottom: 1rem;
 }
@@ -23,17 +39,18 @@ span:hover + .styleCard-Hidden {
   display: block;
 }
 
-.IngredientContainer {
+.IngredientContainer,
+.IngredientsTypeContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  border: 5px solid black;
+  border: 5px solid rgb(63, 59, 58);
   width: 75vw;
-  margin-bottom: 2rem;
+  margin: auto;
 }
 
 .IngredientCard {
-  border: 2px solid red;
+  border: 2px solid rgba(255, 255, 255, 0.7);
   width: 75vh;
   margin-bottom: 1rem;
 }
